# yasimavr

./: .gitignore  .readthedocs.yaml  Doxyfile  MANIFEST.in  Makefile  README.md  README.rst  github_setup.cfg.in  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml  github_setup.cfg.in  github_stack_support.c  python_build_wheels.yml
bindings/: .cproject  .gitignore  .project  Makefile  project.py  pyproject.toml
bindings/src/: generate_siplib.py  project.py  pyproject.Debug.toml  pyproject.Release.toml
docs/: .gitignore  Doxyfile  Makefile  make_mock_libs.py  requirements.txt
docs/source/: CLI.rst  IDE_integration.rst  concepts.rst  conf.py  index.rst
examples/: .gitignore
lib_arch_avr/: .cproject  .project  Makefile  Makefile-debug  Makefile-debug.mk  Makefile-defs  Makefile-defs.mk  Makefile-release  Makefile-release.mk
lib_arch_m0/: .cproject  .project
lib_arch_xt/: .cproject  .project  Makefile  Makefile-debug  Makefile-debug.mk  Makefile-defs  Makefile-defs.mk  Makefile-release  Makefile-release.mk
lib_core/: .cproject  Makefile  Makefile-debug  Makefile-debug.mk  Makefile-defs  Makefile-defs.mk  Makefile-release  Makefile-release.mk
py/: .gitignore
tests/: _test_bench_avr.py  _test_bench_xt.py  _test_utils.py  test_XT_ACP.py  test_XT_SPI.py  test_XT_TCA.py  test_XT_TCB.py  test_avr_intctrl.py  test_avr_spm.py  test_avr_usart.py  test_avr_wdt.py  test_core_firmware.py  test_core_nvm.py  test_core_pin.py  test_core_simid.py  test_devlib_regpath.py  test_io_timer_counter.py  test_xt_intctrl.py  test_xt_port.py
tests/fw/: testfw_mega.c  (+3 more)
(+332 files in other folders)
